--- a/agijagi/app/src/main/res/layout/item_order_management_shimmer.xml
+++ b/agijagi/app/src/main/res/layout/item_order_management_shimmer.xml
@@ -40,11 +40,13 @@
 
 
             <TextView
-                android:id="@+id/textview_order_management_item_buyer_name"
+                android:id="@+id/textview_order_management_item_brand"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="28dp"
+                android:background="#9F9F9F"
+                android:textColor="#9F9F9F"
                 android:text="주문자명"
                 android:textSize="10sp"
                 app:layout_constraintStart_toEndOf="@+id/cardView_order_management_shimmer"
@@ -57,9 +59,11 @@
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="4dp"
                 android:text="제품명 도자기"
+                android:background="#9F9F9F"
+                android:textColor="#9F9F9F"
                 android:textSize="12sp"
                 app:layout_constraintStart_toEndOf="@+id/cardView_order_management_shimmer"
-                app:layout_constraintTop_toBottomOf="@id/textview_order_management_item_buyer_name" />
+                app:layout_constraintTop_toBottomOf="@id/textview_order_management_item_brand" />
 
             <TextView
                 android:id="@+id/textview_order_management_item_price"
@@ -69,6 +73,8 @@
                 android:layout_marginTop="4dp"
                 android:text="100,000원"
                 android:textSize="11sp"
+                android:background="#9F9F9F"
+                android:textColor="#9F9F9F"
                 app:layout_constraintStart_toEndOf="@+id/cardView_order_management_shimmer"
                 app:layout_constraintTop_toBottomOf="@id/textview_order_management_item_name" />
 
@@ -79,6 +85,8 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:text="23.07.08"
+                android:background="#9F9F9F"
+                android:textColor="#9F9F9F"
                 android:textSize="11sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
