--- a/agijagi/app/src/main/res/layout/fragment_order_management.xml
+++ b/agijagi/app/src/main/res/layout/fragment_order_management.xml
@@ -27,4 +27,37 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar_order_management" />
 
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:visibility="gone"
+        tools:visibility="visible"
+        android:id="@+id/recyclerview_order_management_shimmer"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar_order_management">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <include layout="@layout/item_order_management_shimmer" />
+
+            <include layout="@layout/item_order_management_shimmer" />
+
+            <include layout="@layout/item_order_management_shimmer" />
+
+            <include layout="@layout/item_order_management_shimmer" />
+
+            <include layout="@layout/item_order_management_shimmer" />
+
+            <include layout="@layout/item_order_management_shimmer" />
+            <include layout="@layout/item_order_management_shimmer" />
+
+        </LinearLayout>
+    </com.facebook.shimmer.ShimmerFrameLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
